--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.10.3
 locustio==0.12.2
 MarkupSafe==1.1.1
 msgpack-python==0.5.6
+PyYAML==5.1.2
 pyzmq==18.1.0
 requests==2.22.0
 six==1.12.0
