--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+dotenv
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
@@ -17,3 +18,4 @@ requests==2.22.0
 six==1.12.0
 urllib3==1.25.6
 Werkzeug==0.16.0
+python-dotenv
