--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-locust
-dotenv
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
@@ -10,13 +8,15 @@ greenlet==0.4.15
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jsonpickle==1.2
+locust==0.0
 locustio==0.12.2
 MarkupSafe==1.1.1
 msgpack-python==0.5.6
+python-dotenv==0.10.3
 PyYAML==5.1.2
 pyzmq==18.1.0
 requests==2.22.0
 six==1.12.0
 urllib3==1.25.6
 Werkzeug==0.16.0
-python-dotenv
